--- a/index.html
+++ b/index.html
@@ -87,7 +87,6 @@
       border-radius: 50%;
       object-fit: cover;
       margin-bottom: 8px;
-      loading: lazy;
     }
     .category-tile span {
       font-size: 13px;
@@ -338,6 +337,62 @@
       },
       // Add the rest of brands here in the same format...
       // For brevity I show only 2 – copy-paste pattern for others
+      { id: 'top', name: 'Top water', img: 'https://i.postimg.cc/4dGs4htb/top.webp', brandDisplay: 'Top Water',
+        variants: [{size:'0.3L', price:140}, {size:'0.6L', price:150}, {size:'2L', price:160}],
+        nutrition: [{label:'Calcium', val:'0.4 mg/L'},{label:'Magnesium', val:'1.3 mg/L'},{label:'Sodium', val:'2.3 mg/L'},{label:'TDS', val:'20 mg/L'}]
+      },
+      { id: 'top', name: 'Top water', img: 'https://i.postimg.cc/4dGs4htb/top.webp', brandDisplay: 'Top Water',
+        variants: [{size:'0.3L', price:140}, {size:'0.6L', price:150}, {size:'2L', price:160}],
+        nutrition: [{label:'Calcium', val:'0.4 mg/L'},{label:'Magnesium', val:'1.3 mg/L'},{label:'Sodium', val:'2.3 mg/L'},{label:'TDS', val:'20 mg/L'}]
+      },
+      { id: 'top', name: 'Top water', img: 'https://i.postimg.cc/4dGs4htb/top.webp', brandDisplay: 'Top Water',
+        variants: [{size:'0.3L', price:140}, {size:'0.6L', price:150}, {size:'2L', price:160}],
+        nutrition: [{label:'Calcium', val:'0.4 mg/L'},{label:'Magnesium', val:'1.3 mg/L'},{label:'Sodium', val:'2.3 mg/L'},{label:'TDS', val:'20 mg/L'}]
+      },
+      { id: 'top', name: 'Top water', img: 'https://i.postimg.cc/4dGs4htb/top.webp', brandDisplay: 'Top Water',
+        variants: [{size:'0.3L', price:140}, {size:'0.6L', price:150}, {size:'2L', price:160}],
+        nutrition: [{label:'Calcium', val:'0.4 mg/L'},{label:'Magnesium', val:'1.3 mg/L'},{label:'Sodium', val:'2.3 mg/L'},{label:'TDS', val:'20 mg/L'}]
+      },
+      { id: 'top', name: 'Top water', img: 'https://i.postimg.cc/4dGs4htb/top.webp', brandDisplay: 'Top Water',
+        variants: [{size:'0.3L', price:140}, {size:'0.6L', price:150}, {size:'2L', price:160}],
+        nutrition: [{label:'Calcium', val:'0.4 mg/L'},{label:'Magnesium', val:'1.3 mg/L'},{label:'Sodium', val:'2.3 mg/L'},{label:'TDS', val:'20 mg/L'}]
+      },
+      { id: 'top', name: 'Top water', img: 'https://i.postimg.cc/4dGs4htb/top.webp', brandDisplay: 'Top Water',
+        variants: [{size:'0.3L', price:140}, {size:'0.6L', price:150}, {size:'2L', price:160}],
+        nutrition: [{label:'Calcium', val:'0.4 mg/L'},{label:'Magnesium', val:'1.3 mg/L'},{label:'Sodium', val:'2.3 mg/L'},{label:'TDS', val:'20 mg/L'}]
+      },
+      { id: 'top', name: 'Top water', img: 'https://i.postimg.cc/4dGs4htb/top.webp', brandDisplay: 'Top Water',
+        variants: [{size:'0.3L', price:140}, {size:'0.6L', price:150}, {size:'2L', price:160}],
+        nutrition: [{label:'Calcium', val:'0.4 mg/L'},{label:'Magnesium', val:'1.3 mg/L'},{label:'Sodium', val:'2.3 mg/L'},{label:'TDS', val:'20 mg/L'}]
+      },
+      { id: 'top', name: 'Top water', img: 'https://i.postimg.cc/4dGs4htb/top.webp', brandDisplay: 'Top Water',
+        variants: [{size:'0.3L', price:140}, {size:'0.6L', price:150}, {size:'2L', price:160}],
+        nutrition: [{label:'Calcium', val:'0.4 mg/L'},{label:'Magnesium', val:'1.3 mg/L'},{label:'Sodium', val:'2.3 mg/L'},{label:'TDS', val:'20 mg/L'}]
+      },
+      { id: 'top', name: 'Top water', img: 'https://i.postimg.cc/4dGs4htb/top.webp', brandDisplay: 'Top Water',
+        variants: [{size:'0.3L', price:140}, {size:'0.6L', price:150}, {size:'2L', price:160}],
+        nutrition: [{label:'Calcium', val:'0.4 mg/L'},{label:'Magnesium', val:'1.3 mg/L'},{label:'Sodium', val:'2.3 mg/L'},{label:'TDS', val:'20 mg/L'}]
+      },
+      { id: 'top', name: 'Top water', img: 'https://i.postimg.cc/4dGs4htb/top.webp', brandDisplay: 'Top Water',
+        variants: [{size:'0.3L', price:140}, {size:'0.6L', price:150}, {size:'2L', price:160}],
+        nutrition: [{label:'Calcium', val:'0.4 mg/L'},{label:'Magnesium', val:'1.3 mg/L'},{label:'Sodium', val:'2.3 mg/L'},{label:'TDS', val:'20 mg/L'}]
+      },
+      { id: 'top', name: 'Top water', img: 'https://i.postimg.cc/4dGs4htb/top.webp', brandDisplay: 'Top Water',
+        variants: [{size:'0.3L', price:140}, {size:'0.6L', price:150}, {size:'2L', price:160}],
+        nutrition: [{label:'Calcium', val:'0.4 mg/L'},{label:'Magnesium', val:'1.3 mg/L'},{label:'Sodium', val:'2.3 mg/L'},{label:'TDS', val:'20 mg/L'}]
+      },
+      { id: 'top', name: 'Top water', img: 'https://i.postimg.cc/4dGs4htb/top.webp', brandDisplay: 'Top Water',
+        variants: [{size:'0.3L', price:140}, {size:'0.6L', price:150}, {size:'2L', price:160}],
+        nutrition: [{label:'Calcium', val:'0.4 mg/L'},{label:'Magnesium', val:'1.3 mg/L'},{label:'Sodium', val:'2.3 mg/L'},{label:'TDS', val:'20 mg/L'}]
+      },
+      { id: 'top', name: 'Top water', img: 'https://i.postimg.cc/4dGs4htb/top.webp', brandDisplay: 'Top Water',
+        variants: [{size:'0.3L', price:140}, {size:'0.6L', price:150}, {size:'2L', price:160}],
+        nutrition: [{label:'Calcium', val:'0.4 mg/L'},{label:'Magnesium', val:'1.3 mg/L'},{label:'Sodium', val:'2.3 mg/L'},{label:'TDS', val:'20 mg/L'}]
+      },
+      { id: 'top', name: 'Top water', img: 'https://i.postimg.cc/4dGs4htb/top.webp', brandDisplay: 'Top Water',
+        variants: [{size:'0.3L', price:140}, {size:'0.6L', price:150}, {size:'2L', price:160}],
+        nutrition: [{label:'Calcium', val:'0.4 mg/L'},{label:'Magnesium', val:'1.3 mg/L'},{label:'Sodium', val:'2.3 mg/L'},{label:'TDS', val:'20 mg/L'}]
+      },
       { id: 'top', name: 'Top water', img: 'https://i.postimg.cc/4dGs4htb/top.webp', brandDisplay: 'Top Water',
         variants: [{size:'0.3L', price:140}, {size:'0.6L', price:150}, {size:'2L', price:160}],
         nutrition: [{label:'Calcium', val:'0.4 mg/L'},{label:'Magnesium', val:'1.3 mg/L'},{label:'Sodium', val:'2.3 mg/L'},{label:'TDS', val:'20 mg/L'}]
