--- a/index.html
+++ b/index.html
@@ -254,7 +254,7 @@
 <body>
 
   <header>
-    <h1>ET Water Market (+350 Agents)</h1>
+    <h1 id="header-title">ET Water Market (+350 Agents)</h1>
     <div class="moto">To your need • Addis Ababa delivery</div>
   </header>
 
