--- a/index.html
+++ b/index.html
@@ -254,8 +254,9 @@
 <body>
 
   <header>
-    <h1 id="header-title">ET Water Market (+350 Agents)</h1>
-    <div class="moto">To your need • Addis Ababa delivery</div>
+    <h1>ET Water Market (+350 Agents)</h1>
+     <div class="moto">To your need • Addis Ababa delivery</div>
+    </h1>
   </header>
 
   <div class="search-bar">
