--- a/index.html
+++ b/index.html
@@ -254,9 +254,8 @@
 <body>
 
   <header>
-    <h1>ET Water Market (+350 Agents)</h1>
-     <div class="moto">To your need • Addis Ababa delivery</div>
-    </h1>
+    <h1 id="header-title">ET Water Market (+350 Agents)</h1>
+    <div class="moto">To your need • Addis Ababa delivery</div>
   </header>
 
   <div class="search-bar">
@@ -317,12 +316,6 @@
     }
     applyTheme();
     tg.onEvent('themeChanged', applyTheme);
-
-    // Personalize header
-    const user = tg.initDataUnsafe?.user;
-    if (user?.first_name) {
-      document.getElementById('header-title').textContent = `Hi ${user.first_name}! ET Water Market`;
-    }
 
     // ────────────────────────────────────────────────
     // Brands data (central source of truth)
