--- a/index.html
+++ b/index.html
@@ -541,36 +541,28 @@
     // Navigation
     // ────────────────────────────────────────────────
     function showBrandView() {
-      // Hide main screen parts explicitly
-      const searchBar = document.querySelector('.search-bar');
-      const categories = document.querySelector('.categories');
-      const noResults = document.getElementById('no-results');
+      // Hide main screen elements
+      document.querySelector('.search-bar').style.display = 'none';
+      document.querySelector('.categories').style.display = 'none';
+      document.getElementById('no-results').style.display = 'none';
 
-      if (searchBar)   searchBar.style.display = 'none';
-      if (categories)  categories.style.display = 'none';
-      if (noResults)   noResults.style.display = 'none';
-
+      // Show Back button
       tg.BackButton.show();
     }
 
     function hideBrandView() {
-     // Restore main screen parts with CORRECT display values
-     const searchBar = document.querySelector('.search-bar');
-     const categories = document.querySelector('.categories');
-     const noResults = document.getElementById('no-results');
+     // Restore main screen
+     document.querySelector('.search-bar').style.display = '';
+     document.querySelector('.categories').style.display = 'grid';
+     document.getElementById('no-results').style.display = 'none'; // or keep logic if search active
 
-     if (searchBar)   searchBar.style.display = 'flex';       // search bar uses flex
-     if (categories)  categories.style.display = 'grid';      // categories use grid
-     if (noResults)   noResults.style.display = 'none';       // usually hidden unless search active
-
-     // Hide brand sections
+     // Hide all brand sections
      document.querySelectorAll('.brand-section').forEach(section => {
       section.classList.remove('active');
      });
 
-     // Hide Back button only if cart is NOT visible
-     const cartVisible = document.getElementById('cart-summary').classList.contains('visible');
-     if (!cartVisible) {
+     // Hide Back button (unless cart is open)
+     if (!document.getElementById('cart-summary').classList.contains('visible')) {
       tg.BackButton.hide();
      }
 
@@ -579,54 +571,24 @@
 
      tg.HapticFeedback.impactOccurred('light');
     }
-
     
-    function showBrandDetail(brandId) {
-    // 1. Hide main view
-    const searchBar   = document.querySelector('.search-bar');
-    const categories  = document.querySelector('.categories');
-    const noResults   = document.getElementById('no-results');
+    function showBrand(id) {
+      // Hide main list
+     showBrandView();
 
-    if (searchBar)   searchBar.style.display   = 'none';
-    if (categories)  categories.style.display  = 'none';
-    if (noResults)   noResults.style.display   = 'none';
-
-    // 2. Show the selected brand section
-    document.querySelectorAll('.brand-section').forEach(el => el.classList.remove('active'));
-    const target = document.getElementById(brandId + '-section');
-    if (target) {
-        target.classList.add('active');
-    }
-
-    // 3. Show Telegram's native back button
-    tg.BackButton.show();
-
-    tg.HapticFeedback.impactOccurred('light');
-}
-
-   function returnToMainView() {
-     // 1. Hide all brand sections
-     document.querySelectorAll('.brand-section').forEach(el => el.classList.remove('active'));
-
-     // 2. Show main view elements – use EXACT original display values
-     const searchBar   = document.querySelector('.search-bar');
-     const categories  = document.querySelector('.categories');
-     const noResults   = document.getElementById('no-results');
-
-     if (searchBar)   searchBar.style.display   = 'flex';     // ← important: search uses flex
-     if (categories)  categories.style.display  = 'grid';     // ← important: categories use grid
-     // noResults usually stays 'none' unless active search
-
-     // 3. Hide back button unless cart is open
-     const cartIsOpen = document.getElementById('cart-summary')?.classList.contains('visible');
-     if (!cartIsOpen) {
-      tg.BackButton.hide();
+     // Show selected brand
+      document.querySelectorAll('.brand-section').forEach(s => s.classList.remove('active'));
+      const section = document.getElementById(`${id}-section`);
+      if (section) {
+      section.classList.add('active');
      }
 
-     // 4. Scroll to top
-     window.scrollTo({ top: 0, behavior: 'smooth' });
-
      tg.HapticFeedback.impactOccurred('light');
+
+     // Optional: small delay + smooth appear
+     setTimeout(() => {
+     section.scrollIntoView({ behavior: 'smooth', block: 'start' });
+     }, 80);
     }
 
     function hideBrandView() {
@@ -637,17 +599,22 @@
 
     // Use native Back button
     tg.BackButton.onClick(() => {
-     const activeBrandSection = document.querySelector('.brand-section.active');
-     const cartIsVisible = document.getElementById('cart-summary').classList.contains('visible');
+     const activeBrand = document.querySelector('.brand-section.active');
+     const cartVisible = document.getElementById('cart-summary').classList.contains('visible');
 
-     if (activeBrandSection) {
-      // Priority: close brand detail first
-      hideBrandView();
-     } 
-     else if (cartIsVisible) {
-      // Then close cart if open
+     if (activeBrand) {
+      // We are in brand detail view → go back to main list
+     hideBrandView();
+     } else if (cartVisible) {
+      // Cart is open → close cart
       document.getElementById('cart-summary').classList.remove('visible');
-      tg.BackButton.hide();  // safe to hide here (no brand active)
+      // Only hide BackButton if no brand is active
+      if (!document.querySelector('.brand-section.active')) {
+       tg.BackButton.hide();
+      }
+     } else {
+      // Fallback: if nothing else, hide the button
+      tg.BackButton.hide();
      }
 
      tg.HapticFeedback.impactOccurred('light');
